# gdelt_fetcher

./: Cargo.toml  Dockerfile  GCAM-MASTER-CODEBOOK-fixed.csv  GDELT_FETCHER_USAGE.md  README.md  TESTING_LOGGING_SUMMARY.md  debug_gcam.rs  events.CSV  fix_csv_encoding.rs  mentions.CSV  populate_gcam_db.rs  verify_gcam_enrichment.rs
data/: .gitignore  Cargo.toml  README.md  bacon.toml
data/data/csv/: 20240515224500.export.csv  20241029231500.export.csv  20241029231500.mentions.csv  20241119170000.export.csv  20241119170000.mentions.csv  20241119171500.export.csv  20241119171500.mentions.csv
data/data/headings/: EventsHeaders  GKGHeaders  MentionsHeaders
data/events/: 20250807220000.export.CSV  20250807231500.export.CSV  20250807233000.export.CSV  20250807234500.export.CSV  20250808131500.export.CSV  20250808181500.export.CSV  20250808183000.export.CSV  20250810020000.export.CSV  20250820154500.export.CSV  20250820163000.export.CSV
data/mentions/: 20250807220000.mentions.CSV  20250807231500.mentions.CSV  20250807233000.mentions.CSV  20250807234500.mentions.CSV  20250808131500.mentions.CSV  20250808181500.mentions.CSV  20250808183000.mentions.CSV  20250810020000.mentions.CSV  20250820154500.mentions.CSV  20250820163000.mentions.CSV
data/output/: 20250322180000.export.csv
data/src/: csv_to_json.rs  csv_to_structs.rs  data_reader.rs  gdelt_api.rs  gdelt_fetcher.rs  lib.rs  utils.rs
data/src/fetchers/: mod.rs
data/src/fetchers/gdelt/: event_table_fetcher.rs  gdelt_fetcher.rs  gkg_table_fetcher.rs  mention_table_fetcher.rs  mod.rs
data/src/utils/: mod.rs  types.rs
data/src/utils/types/: mod.rs
data/test_output/: 20250322180000.mentions.CSV  20250511180000.export.csv  20250511211500.export.csv  20250602193000.export.csv  20250602194500.export.csv  20250603100000.export.csv
data/tests/: csv_to_json_tests.rs  csv_to_struct_tests.rs  gedelt_fetcher_tests.rs  integration_fetch_tests.rs  mod.rs
data/tests/api_tests/: mod.rs  query_types_test.rs
data/tests/csv_tests/: csv_to_json_tests.rs  csv_to_struct_tests.rs  mod.rs
models/: Cargo.toml  Dockerfile  README.md  TODOLIST.md  build.js  build.rs  package-lock.json  package.json
models/src/: lib.rs
models/src/components/: mod.rs
models/src/components/base_components/: mention.rs  mod.rs  verb.rs
models/src/components/cameo/: mod.rs
models/src/components/codes/: actor.rs  location.rs  mention.rs  mod.rs  verb.rs
models/src/components/shared/: actor.rs  document_type.rs  entity.rs  event_action.rs  id_components.rs  language.rs  location.rs  mod.rs  theme.rs  (+3 more)
models/src/gcam/: debug_test.rs  lookup.rs  memory_database.rs  mod.rs
models/src/gdelt_schema/: event.rs  gdg.rs  geg.rs  ggg.rs  gkg.rs  gqg.rs  grg.rs  mention.rs  mod.rs
models/src/models/: mod.rs
models/src/raw_types/: event_table.rs  mention_table.rs  mod.rs
models/src/schema/: event_table.rs  global_difference_graph_table.rs  global_entity_graph_table.rs  global_knowledge_graph_table.rs  global_quotation_graph_table.rs  mention_table.rs  mod.rs  primary_keys.rs
models/src/types/: event_table.rs  gkg_table.rs  mention_table.rs  mod.rs
models/tests/: data_reader.rs  mod.rs
models/tests/data/: 20240819130000.export.csv  20240819130000.mentions.csv
models/tests/gdelt/: events_tests.rs  gkg_tests.rs  mentions_tests.rs  mod.rs
(+231 files in other folders)
