[package]
name = "gdelt_fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
data = {path = "./data"}
models = {path = "./models"}
env_logger = "*"
tokio = "*"
csv = "1.3.1"
anyhow = "1.0.97"
log = "0.4.26"
chrono = "0.4.40"
async-trait = "0.1.88"
url = "2.5.4"
tokio-util = "0.7.15"
tempfile = { version = "3.20.0", features = ["nightly"] }

[workspace]
members = ["data", "models"]
