[package]
name = "data"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
csv = "1.3.1"
gcloud-bigquery = "1.3.0"
models = { version = "0.1.0", path = "../models" }
url = "2.5.4"
reqwest = "0.11"
tokio = { version = "1.0", features = ["full"] }
md5 = "0.7"
zip = "0.6"
log = "0.4"

[dev-dependencies]
tempfile = "3.0"
env_logger = "0.11"
