[package]
name = "data"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "*"
chrono = "*"
csv = "*"
gcloud-bigquery = "*"
models = { version = "*", path = "../models" }
url = "*"
reqwest = "*"
tokio = { version = "*", features = ["full"] }
md5 = "*"
zip = "*"
log = "*"

[dev-dependencies]
tempfile = "3.0"
env_logger = "*"
