[package]
name = "models"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.10"
chrono = { version = "*", features = ["serde"] }
url = { version = "*", features = ["serde"] }
anyhow = "*"
csv = "*"
serde = { version = "1.0", features = ["derive"] }

bincode = "1.3"
tempfile = "3.0"

# serde_json = "1.0"
